...
                            <constraint firstItem="6op-Xo-EkK" firstAttribute="bottom" secondItem="eGh-AF-gOh" secondAttribute="bottom" id="2lQ-vi-hAA"/>
                            <constraint firstItem="6op-Xo-EkK" firstAttribute="trailing" secondItem="eGh-AF-gOh" secondAttribute="trailing" id="3IP-UN-xOb"/>
                            <constraint firstItem="eGh-AF-gOh" firstAttribute="leading" secondItem="6op-Xo-EkK" secondAttribute="leading" id="QkG-2F-NzW"/>
                            <constraint firstItem="eGh-AF-gOh" firstAttribute="top" secondItem="6op-Xo-EkK" secondAttribute="top" id="ZhN-2s-jpG"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Details" id="6Xa-7s-dmI"/>
                    <connections>
                        <outlet property="amountLabel" destination="qdW-C0-ocK" id="ZHF-MS-27B"/>
                        <outlet property="dateLabel" destination="Wg5-eZ-F1s" id="nuk-zc-Nku"/>
                        <outlet property="historicalBalanceLabel" destination="gDG-TX-ThJ" id="NFa-yK-Eao"/>
                        <outlet property="textLabel" destination="c7U-YP-sQ2" id="Spi-dJ-zVs"/>
                    </connections>
...
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="0fh-HP-jL7">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="36"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="TZH-uN-z76">
                                                        <rect key="frame" x="0.0" y="0.0" width="328" height="36"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="amountInputField"/>
                                                        <color key="textColor" systemColor="systemGreenColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="decimalPad" returnKeyType="next" enablesReturnKeyAutomatically="YES" smartDashesType="yes"/>
                                                    </textField>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lT7-x1-Fbg">
                                                        <rect key="frame" x="336" y="0.0" width="38" height="36"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="38" id="XUy-As-mKv"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                                        <state key="normal" title="+ / -"/>
                                                        <connections>
                                                            <action selector="signButtonPressed:" destination="Ooo-Qf-7kM" eventType="touchUpInside" id="3JG-ks-Iqf"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
                                            <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Aq-MQ-Lbn">
                                                <rect key="frame" x="0.0" y="44" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textInputField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                                            </textField>
                                        </subviews>
                                    </stackView>
                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="63a-k6-8mZ">
                                        <rect key="frame" x="20" y="106" width="374" height="216"/>
                                    </datePicker>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNv-Xn-hda" userLabel="Submit">
                                        <rect key="frame" x="20" y="330" width="374" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Submit"/>
                                        <connections>
                                            <action selector="saveButtonPressed:" destination="Ooo-Qf-7kM" eventType="touchUpInside" id="Y7g-Z9-SCh"/>
                                        </connections>
                                    </button>
...
