...
        guard let transaction = transaction else { return }

        super.viewWillAppear(animated)
        
        if transaction.recentTransaction != nil && achievementTransactionPresenter != nil {
            let barButtonItem = UIBarButtonItem(image: UIImage(systemName: "square.and.pencil"), style: .plain, target: self, action: Selector("editButtonPressed"))
            barButtonItem.accessibilityLabel = "editButton"
            
            self.navigationItem.rightBarButtonItem = barButtonItem
        }
        
        populateViewWith(transaction)
    }
...
    // MARK: Private Functions
    private func populateViewWith(_ transaction: HistoricalTransaction) {
        if transaction.amount < 0 {
            amountLabel.text = "\(NumberHelper.formattedString(for: transaction.amount))"
            amountLabel.textColor = .systemRed
        } else if transaction.amount == 0 {
            amountLabel.text = "+/- 0,00"
            amountLabel.textColor = .none
        } else {
            amountLabel.text = "+\(NumberHelper.formattedString(for: transaction.amount))"
            amountLabel.textColor = .systemGreen
        }
        
...
